feat : 이미지 첨가

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERICA의 맛집 UI</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "style.css"> 
 </head>
 <body>
 
@@ -43,52 +43,52 @@
 
     <!-- 실제 한양대 ERICA 근처 식당을 예시로 사용 -->
     <div class="result-grid">
-        <div class="result-box" data-name="천사곱창">
-            <div class="result-name">천사곱창</div>
+        <div class="result-box" data-name="찌개찌개">
+            <div class="result-name">찌개찌개</div>
             <div class="result-info">
-                곱창 · 야채구이<br>
-                성안길 · 저녁 술 한 잔
+                한식 · 찌개/제육볶음<br>
+            <img src="../image/찌개찌개.png" alt="찌개찌개 사진" class="result-image">    
             </div>
         </div>
         <div class="result-box" data-name="에비수">
             <div class="result-name">에비수</div>
             <div class="result-info">
                 일식 · 초밥/나베우동<br>
-                한양대학2길 · 조용한 식사
+            <img src="../image/에비수.png" alt="에비수 사진" class="result-image">
             </div>
         </div>
-        <div class="result-box" data-name="포냐향">
-            <div class="result-name">포냐향</div>
+        <div class="result-box" data-name="사라이도네르케밥">
+            <div class="result-name">사라이도네르케밥</div>
             <div class="result-info">
-                베트남 쌀국수 · 덮밥<br>
-                성안길 · 해장 추천
+                양식 · 케밥/버거 <br>
+            <img src="../image/케밥.png" alt="케밥 사진" class="result-image">
             </div>
         </div>
-        <div class="result-box" data-name="단골손님">
-            <div class="result-name">단골손님</div>
+        <div class="result-box" data-name="현가병천순대장터국밥">
+            <div class="result-name">현가병천순대장터국밥</div>
             <div class="result-info">
-                비빔밥 · 덮밥<br>
-                학생 인기 · 점심 한 끼
+                한식 · 국밥/순대/수육 <br>
+            <img src="../image/병천.png" alt="병천 사진" class="result-image">
             </div>
         </div>
-        <div class="result-box" data-name="도스마스">
+        <div class="result-box" data-name="도스마스">   
             <div class="result-name">도스마스</div>
             <div class="result-info">
                 멕시칸 · 부리또/타코<br>
-                간편식 · 포장 가능
+            <img src="../image/도스마스.png" alt="도스마스 사진" class="result-image">
             </div>
         </div>
-        <div class="result-box" data-name="스시도쿠">
-            <div class="result-name">스시도쿠</div>
+        <div class="result-box" data-name="행복한 짬뽕">
+            <div class="result-name">행복한 짬뽕</div>
             <div class="result-info">
-                초밥 · 일식<br>
-                데이트 · 분위기 좋은 곳
+                중식 · 짜장면/짬뽕/탕수육<br>
+            <img src="../image/짬뽕.png" alt="짬뽕 사진" class="result-image">
             </div>
         </div>
     </div>
 </div>
 
-<script src="script.js"></script>
+<script src = "script.js"></script>
 </body>
 </html>
 
