--- a/pagept.html
+++ b/pagept.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERICA의 맛집 UI</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -39,19 +39,14 @@
     <div class="recommend-area">
         <div class="dropdown"></div>
         <div class="random-button">랜덤 추천</div>
+        <!-- sort-menu는 JS가 붙임 -->
     </div>
 
     <div class="result-grid">
         <!-- JS에서 카드가 채워짐 -->
-        <div class="result-box"></div>
-        <div class="result-box"></div>
-        <div class="result-box"></div>
-        <div class="result-box"></div>
-        <div class="result-box"></div>
-        <div class="result-box"></div>
     </div>
 </div>
 
-     <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
