별점기능추가

--- a/detail.html
+++ b/detail.html
@@ -40,6 +40,15 @@
                             placeholder="리뷰를 입력하세요"
                             required
                         ></textarea>
+
+                        <select id="review-rating" class="review-rating-select">
+                            <option value="5">⭐ 5점 (최고)</option>
+                            <option value="4">⭐ 4점</option>
+                            <option value="3">⭐ 3점</option>
+                            <option value="2">⭐ 2점</option>
+                            <option value="1">⭐ 1점</option>
+                        </select>
+
                         <button type="submit">리뷰 남기기</button>
                     </form>
                 </section>
