--- a/pagept.html
+++ b/pagept.html
@@ -46,7 +46,7 @@
             <!-- JS에서 카드가 채워짐 -->
         </div>
     </div>
-
+<!--자바스크립트 연결부-->>
     <script src="script.js"></script>
 </body>
 </html>
