--- a/detail.html
+++ b/detail.html
@@ -19,6 +19,7 @@
             <p id="detail-rating"></p>
 
             <img id="detail-image" class="detail-image" alt="음식 사진">
+            <img id="detail-map" class="detail-map" alt="지도 사진">
 
             <p id="detail-desc" class="detail-desc"></p>
                 <!-- 리뷰 영역 -->
