버튼 하나 추가

--- a/pagept.html
+++ b/pagept.html
@@ -28,6 +28,8 @@
                 <div class="button filter-button">가성비</div>
                 <div class="button filter-button">간편식</div>
             </div>
+            <div class="button-row">
+                <div class="button favorite-only-button">찜한 맛집만</div>
         </div>
 
         <div class="search-area">
